test/types/seq/bradc/emptySeq3.good
Error: Type mismatch in assignment from nil to seq(int) (emptySeq3.chpl:1)
